Renamed CWnd::CharToTChar to ::CharToTChar
Renamed CWnd::CharToWide  to ::CharToWide
Renamed CWnd::TCharToChar to ::TCharToChar
Renamed CWnd::TCharToWide to ::TCharToWide
Renamed CWnd::WideToChar  to ::WideToChar
Renamed CWnd::WideToTChar to ::WideToTChar
Removed CWinException::MessageBox
Removed CPropertySheet::QuerySiblings

Added DS_NO_CLOSE style to suppress the closing of docked dockers

Added GDIPlus sample
Updated Network samples
Update  FormDemo sample

Incompatibilities with previous versions
----------------------------------------
* The stricter testing with asserts might reveal previously hidden errors in 
   user's code.
* Some CSocket functions take TCHAR as an argument instead of char.
* CFrame::LoadRegistrySettings, CFrame::LoadRegistryMRUSettings and 
   CFrame::SaveRegistrySettings return BOOL.
* CPropertySheet.m_PSH is now private. Use SetIcon to set the icon.
* CPropertyPage change the return types of several functions.
   

Version 6.9
===========

New Features and Enhancements
-----------------------------
* Added a WebBrowser class called CWebBrowser.  This class provides a web 
   browser in a window. This class can be used as a view window anywhere 
   view windows are used, such as in frames, dockers, MDI Children, 
   Tabbed MDIs etc.  It has no dependence on ATL, greatly simplifying the 
   approach to adding a browser window to any application.  It can be compiled
   by any of the supported compilers including Dev-C++, MinGW and the Borland 
   compilers as well as the compilers from Microsoft.  
* Added an ActiveX host class called CAXWindow.
* The CTab, CMDITab, CDocker and CDockContainer classes are now flicker free,
   providing a more professional look during resizing and docker moving.
* Improved the dock targeting and dock hinting.   
* Introduced a new set of text conversion functions to convert between Ansi, 
   Unicode and Wide characters.
* CWnd objects can now report their type with GetWindowType.